# VideoForgeV2.0

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/rave-core/: Cargo.toml  README.md
crates/rave-core/src/: backend.rs  codec_traits.rs  error.rs  ffi_types.rs  lib.rs
crates/rave-cuda/: Cargo.toml  README.md
crates/rave-cuda/src/: lib.rs  sys.rs
crates/rave-ffmpeg/: Cargo.toml  README.md
crates/rave-ffmpeg/src/: ffmpeg_muxer.rs  ffmpeg_sys.rs  file_source.rs  lib.rs  probe.rs
crates/rave-nvcodec/: Cargo.toml  README.md  build.rs
crates/rave-nvcodec/src/: lib.rs  sys.rs
crates/rave-pipeline/: Cargo.toml  README.md
crates/rave-pipeline/src/: inference.rs  lib.rs  pipeline.rs  runtime.rs  stage_graph.rs
crates/rave-tensorrt/: Cargo.toml  README.md
crates/rave-tensorrt/src/: lib.rs
crates/rave-tensorrt/tests/: provider_bridge_smoke.rs
docs/: PHASE11_CLI_CHECKLIST.md  WSL.md  release_v0.2.md
engine-v2/: Cargo.toml
engine-v2/src/: lib.rs  main.rs
engine-v2/src/codecs/: nvdec.rs  nvenc.rs
engine-v2/src/core/: kernels.rs
engine-v2/src/engine/: pipeline.rs
engine-v2/src/io/: ffmpeg_muxer.rs  file_sink.rs
rave-cli/: Cargo.toml  README.md
rave-cli/src/: main.rs
rave-cli/tests/: cli_subcommands.rs
reports/: post_consolidation_validation_2026-02-18.md  workspace_integrity_validation_2026-02-19.md
scripts/: check_deps.py
scripts/wsl/: env.sh
