[package]
name = "rave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RAVE CLI — GPU-native video super-resolution engine."
readme = "README.md"

[[bin]]
name = "rave"
path = "src/main.rs"
doc = false

[features]
default = []
debug-alloc = ["rave-core/debug-alloc", "rave-pipeline/debug-alloc"]
audit-no-host-copies = ["rave-core/audit-no-host-copies", "rave-pipeline/audit-no-host-copies"]

[dependencies]
rave-core = { workspace = true }
rave-pipeline = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
