[package]
name = "rave-nvcodec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RAVE NVDEC/NVENC hardware codec wrappers."
build = "build.rs"

[dependencies]
rave-core = { workspace = true }
cudarc = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
